RESOLVED FIXED13111
Partially-loaded images change to error image when loading is stopped
https://bugs.webkit.org/show_bug.cgi?id=13111
Summary Partially-loaded images change to error image when loading is stopped
mitz
Reported 2007-03-18 13:59:48 PDT
When you open the URL in Safari with TOT WebKit and hit Command-. before it's finished loading but after images have started loading(*), all partially-loaded images change to the error image. This is a (recent) regression from shipping WebKit. * - You need to be quick or have a slow connection or find a page served from a slower server.
Attachments
Proposed fix - don't error the resource when its cancelled (2.55 KB, patch)
2007-03-18 17:45 PDT, Brady Eidson
hyatt: review+
mitz
Comment 1 2007-03-18 14:16:17 PDT
mitz
Comment 2 2007-03-18 14:21:23 PDT
I was wrong, this is not a regression from Safari 2.0! I had forgotten it because TOT behaved differently for so long.
Brady Eidson
Comment 3 2007-03-18 17:35:22 PDT
Regression or not, Hyatt reccomended an easy fix I'm putting a patch together for right now
Brady Eidson
Comment 4 2007-03-18 17:45:46 PDT
Created attachment 13699 [details] Proposed fix - don't error the resource when its cancelled Proposed fix - don't error the resource when its cancelled
Dave Hyatt
Comment 5 2007-03-18 17:47:16 PDT
Comment on attachment 13699 [details] Proposed fix - don't error the resource when its cancelled r=me
Brady Eidson
Comment 6 2007-03-18 17:52:21 PDT
Committed in r20299
Note You need to log in before you can comment on or make changes to this bug.