        Reviewed by Hyatt

http://bugs.webkit.org/show_bug.cgi?id=13111
        When stopped a load before it completes, partial images become the
        broken image icon

        * loader/loader.cpp:
        (WebCore::Loader::didFail): Split off into a method that knows the
          difference between failed and cancelled.  If a load is cancelled,
          don't call error() on the object - only remove it from the cache
        (WebCore::Loader::cancelRequests): Call didFail(loader, true)
        * loader/loader.h: Added didFail(SubresourceLoader*, bool cancelled)



Canonical link: https://commits.webkit.org/17083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20299 268f45cc-cd09-0410-ab3c-d52691b4dbfc