WebCore/loader/loader.h
@@ -59,6 +59,7 @@ namespace WebCore {
         virtual void didReceiveData(SubresourceLoader*, const char*, int);
         virtual void didFinishLoading(SubresourceLoader*);
         virtual void didFail(SubresourceLoader*, const ResourceError&);
+        void didFail(SubresourceLoader*, bool cancelled = false);
 
         void servePendingRequests(bool skipCanLoadCheck = false);
 
